--- a/factura.html
+++ b/factura.html
@@ -29,259 +29,274 @@
     <button id="boton-volver"><a href="./index.html">Volver</a></button>
 
     <script>
-      const productos = [
-        {
-          nombre: "Actron600",
-          precio: 5600,
-        },
+     const productos = [
+  {
+    nombre: "Actron600",
+    precio: 5600,
+  },
 
-        {
-          nombre: "Actron400",
-          precio: 2200,
-        },
+  {
+    nombre: "Actron400",
+    precio: 2200,
+  },
 
-        {
-          nombre: "Alikal",
-          precio: 600,
-        },
+  {
+    nombre: "Alikal",
+    precio: 600,
+  },
 
-        {
-          nombre: "Amoxicilina",
-          precio: 1350,
-        },
+  {
+    nombre: "Amoxicilina",
+    precio: 1350,
+  },
 
-        {
-          nombre: "Amoxidal",
-          precio: 2400,
-        },
+  {
+    nombre: "Amoxidal",
+    precio: 2400,
+  },
 
-        {
-          nombre: "Anaflex",
-          precio: 1900,
-        },
+  {
+    nombre: "Anaflex",
+    precio: 1900,
+  },
 
-        {
-          nombre: "Almaximo",
-          precio: 1500,
-        },
+  {
+    nombre: "Almaximo",
+    precio: 1500,
+  },
 
-        {
-          nombre: "Aspirineta",
-          precio: 700,
-        },
+  {
+    nombre: "Aspirineta",
+    precio: 700,
+  },
 
-        {
-          nombre: "Azitromicina",
-          precio: 1500,
-        },
+  {
+    nombre: "Azitromicina",
+    precio: 1500,
+  },
 
-        {
-          nombre: "Bayaspirina",
-          precio: 1550,
-        },
+  {
+    nombre: "Bayaspirina",
+    precio: 1550,
+  },
 
-        {
-          nombre: "Buscapina",
-          precio: 5600,
-        },
+  {
+    nombre: "Buscapina",
+    precio: 5600,
+  },
 
-        {
-          nombre: "Cafiaspirina",
-          precio: 1800,
-        },
+  {
+    nombre: "Cafiaspirina",
+    precio: 1800,
+  },
 
-        {
-          nombre: "CafiaspirinaPlus",
-          precio: 2300,
-        },
+  {
+    nombre: "CafiaspirinaPlus",
+    precio: 2300,
+  },
 
-        {
-          nombre: "CaramelosCAnti",
-          precio: 2500,
-        },
+  {
+    nombre: "CaramelosCAnti",
+    precio: 2500,
+  },
 
-        {
-          nombre: "Dexalergin",
-          precio: 11500,
-        },
+  {
+    nombre: "Dexalergin",
+    precio: 11500,
+  },
 
-        {
-          nombre: "Diclofenac",
-          precio: 1000,
-        },
+  {
+    nombre: "Diclofenac",
+    precio: 1000,
+  },
 
-        {
-          nombre: "Dorixina",
-          precio: 1400,
-        },
+  {
+    nombre: "Dorixina",
+    precio: 1400,
+  },
 
-        {
-          nombre: "Ibuprofeno600",
-          precio: 1000,
-        },
+  {
+    nombre: "Ibuprofeno600",
+    precio: 1000,
+  },
 
-        {
-          nombre: "IbuevanolRap.Acc",
-          precio: 2000,
-        },
+  {
+    nombre: "IbuevanolRap.Acc",
+    precio: 2000,
+  },
 
-        {
-          nombre: "IbuevanolPlus",
-          precio: 2200,
-        },
+  {
+    nombre: "IbuevanolPlus",
+    precio: 2200,
+  },
 
-        {
-          nombre: "Keterolac",
-          precio: 600,
-        },
+  {
+    nombre: "Keterolac",
+    precio: 600,
+  },
 
-        {
-          nombre: "Loratadina",
-          precio: 900,
-        },
+  {
+    nombre: "Loratadina",
+    precio: 900,
+  },
 
-        {
-          nombre: "Mejoralito",
-          precio: 1850,
-        },
+  {
+    nombre: "Mejoralito",
+    precio: 1850,
+  },
 
-        {
-          nombre: "Migral",
-          precio: 3750,
-        },
+  {
+    nombre: "Migral",
+    precio: 3750,
+  },
 
-        {
-          nombre: "Mylanta",
-          precio: 2100,
-        },
+  {
+    nombre: "Mylanta",
+    precio: 2100,
+  },
 
-        {
-          nombre: "Next",
-          precio: 3300,
-        },
+  {
+    nombre: "Next",
+    precio: 3300,
+  },
 
-        {
-          nombre: "Novalagina",
-          precio: 4900,
-        },
+  {
+    nombre: "Novalagina",
+    precio: 4900,
+  },
 
-        {
-          nombre: "Omeprazol",
-          precio: 600,
-        },
+  {
+    nombre: "Omeprazol",
+    precio: 600,
+  },
 
-        {
-          nombre: "PastillaDeCarbon",
-          precio: 600,
-        },
+  {
+    nombre: "PastillaDeCarbon",
+    precio: 600,
+  },
 
-        {
-          nombre: "Ponstil",
-          precio: 1350,
-        },
+  {
+    nombre: "Ponstil",
+    precio: 1350,
+  },
 
-        {
-          nombre: "Quraplus",
-          precio: 3100,
-        },
+  {
+    nombre: "Quraplus",
+    precio: 3100,
+  },
 
-        {
-          nombre: "Refrianex",
-          precio: 3300,
-        },
+  {
+    nombre: "Refrianex",
+    precio: 3300,
+  },
 
-        {
-          nombre: "SildenafilVENT3x30",
-          precio: 6500,
-        },
+  {
+    nombre: "SildenafilVENT3x30",
+    precio: 6500,
+  },
 
-        {
-          nombre: "SertalPerla",
-          precio: 3700,
-          // 2290
-        },
+  {
+    nombre: "SertalPerla",
+    precio: 3700,
+    // 2290
+  },
 
-        {
-          nombre: "SertalCompuesto",
-          precio: 4900,
-          // 3310
-        },
+  {
+    nombre: "SertalCompuesto",
+    precio: 4900,
+    // 3310
+  },
 
-        {
-          nombre: "Sindol600",
-          precio: 2350,
-        },
+  {
+    nombre: "Sindol600",
+    precio: 2350,
+  },
 
-        {
-          nombre: "Tafirol1g",
-          precio: 1900,
-        },
+  {
+    nombre: "Tafirol1g",
+    precio: 1900,
+  },
 
-        {
-          nombre: "Tafirol500mg",
-          precio: 1800,
-        },
+  {
+    nombre: "Tafirol500mg",
+    precio: 1800,
+  },
 
-        {
-          nombre: "TafirolPlus",
-          precio: 2700,
-        },
+  {
+    nombre: "TafirolPlus",
+    precio: 2700,
+  },
 
-        {
-          nombre: "TafirolFlex",
-          precio: 2000,
-        },
+  {
+    nombre: "TafirolResaca",
+    precio: 3000,
+  },
 
-        {
-          nombre: "TafirolMigra",
-          precio: 3600,
-        },
+  {
+    nombre: "TafirolFlex",
+    precio: 2000,
+  },
 
-        {
-          nombre: "Tafirolito",
-          precio: 3200,
-        },
+  {
+    nombre: "TafirolMigra",
+    precio: 3600,
+  },
 
-        {
-          nombre: "TeVick",
-          precio: 1500,
-        },
+  {
+    nombre: "Tafirolito",
+    precio: 3200,
+  },
 
-        {
-          nombre: "TeVENT3",
-          precio: 700,
-        },
+  {
+    nombre: "TeVick",
+    precio: 1500,
+  },
 
-        {
-          nombre: "TeRolfita",
-          precio: 450,
-        },
+  {
+    nombre: "TeVENT3",
+    precio: 700,
+  },
 
-        {
-          nombre: "Uvasal",
-          precio: 400,
-        },
+  {
+    nombre: "TeRolfita",
+    precio: 450,
+  },
 
-        {
-          nombre: "Curitas",
-          precio: 500,
-        },
+  {
+    nombre: "Uvasal",
+    precio: 400,
+  },
 
-        {
-          nombre: "Enc.CANDELAx25",
-          precio: 8000,
-        },
+  {
+    nombre: "Curitas",
+    precio: 500,
+  },
 
-        {
-          nombre: "Rep.911",
-          precio: 3500,
-        },
+  {
+    nombre: "Enc.CANDELAx25",
+    precio: 8000,
+  },
 
-        {
-          nombre: "OFF.Crema",
-          precio: 3500,
-        },
-      ];
+  {
+    nombre: "Enc.BICx12",
+    precio: 9000,
+  },
+
+  {
+    nombre: "PRIMEx24",
+    precio: 40800,
+  },
+
+  {
+    nombre: "Rep.911",
+    precio: 3500,
+  },
+
+  {
+    nombre: "OFF.Crema",
+    precio: 3500,
+  },
+];
       // Función para obtener parámetros de la cadena de consulta
       function getParameterByName(name, url) {
         if (!url) url = window.location.href;
