--- a/factura.html
+++ b/factura.html
@@ -141,6 +141,11 @@
   },
 
   {
+    nombre: "Loperamida",
+    precio: 900,
+  },
+
+  {
     nombre: "Mejoralito",
     precio: 1850,
   },
@@ -283,8 +288,8 @@
   },
 
   {
-    nombre: "PRIMEx24",
-    precio: 40800,
+    nombre: "Pres.PRIME",
+    precio: 1700,
   },
 
   {
