--- a/factura.html
+++ b/factura.html
@@ -56,13 +56,8 @@
   },
 
   {
-    nombre: "Anaflex",
-    precio: 1900,
-  },
-
-  {
     nombre: "Almaximo",
-    precio: 1500,
+    precio: 2500,
   },
 
   {
@@ -131,6 +126,11 @@
   },
 
   {
+    nombre: "IbuevanolForte",
+    precio: 2200,
+  },
+
+  {
     nombre: "Keterolac",
     precio: 800,
   },
@@ -158,11 +158,6 @@
   {
     nombre: "Mylanta",
     precio: 2100,
-  },
-
-  {
-    nombre: "Next",
-    precio: 3300,
   },
 
   {
@@ -196,7 +191,7 @@
   },
 
   {
-    nombre: "SildenafilVENT3x30",
+    nombre: "SildenafilVENT3x20",
     precio: 6500,
   },
 
@@ -213,8 +208,8 @@
   },
 
   {
-    nombre: "Sindol600",
-    precio: 2400,
+    nombre: "Fabogesic600",
+    precio: 2300,
   },
 
   {
@@ -238,8 +233,8 @@
   },
 
   {
-    nombre: "TafirolFlex",
-    precio: 2000,
+    nombre: "TafirolDuo",
+    precio: 3000,
   },
 
   {
@@ -283,7 +278,7 @@
   },
 
   {
-    nombre: "Enc.BICx12",
+    nombre: "MiniBICx12",
     precio: 9000,
   },
 
