--- a/factura.html
+++ b/factura.html
@@ -42,12 +42,7 @@
 
 {
  nombre: "Alikal",
- precio: 600,
-},
-
-{
- nombre: "Amoxicilina",
- precio: 1350,
+ precio: 700,
 },
 
 {
@@ -77,12 +72,12 @@
 
 {
  nombre: "Buscapina",
- precio: 5800,
+ precio: 5900,
 },
 
 {
  nombre: "Cafiaspirina",
- precio: 1800,
+ precio: 1900,
 },
 
 {
@@ -107,7 +102,7 @@
 
 {
  nombre: "Dorixina",
- precio: 1400,
+ precio: 1600,
 },
 
 {
@@ -156,18 +151,13 @@
 },
 
 {
- nombre: "Mylanta",
- precio: 2100,
-},
-
-{
  nombre: "Novalagina",
  precio: 4900,
 },
 
 {
  nombre: "Omeprazol",
- precio: 700,
+ precio: 800,
 },
 
 {
@@ -182,7 +172,7 @@
 
 {
  nombre: "Quraplus",
- precio: 3100,
+ precio: 3200,
 },
 
 {
@@ -191,20 +181,18 @@
 },
 
 {
- nombre: "SildenafilVENT3x20",
+ nombre: "SildenafilVENT3",
  precio: 6500,
 },
 
 {
  nombre: "SertalPerla",
  precio: 3700,
- // 2290
 },
 
 {
  nombre: "SertalCompuesto",
- precio: 4900,
- // 3310
+ precio: 5000,
 },
 
 {
@@ -219,12 +207,12 @@
 
 {
  nombre: "Tafirol500mg",
- precio: 1800,
+ precio: 1900,
 },
 
 {
  nombre: "TafirolPlus",
- precio: 2700,
+ precio: 2900,
 },
 
 {
@@ -235,16 +223,6 @@
 {
  nombre: "TafirolDuo",
  precio: 2400,
-},
-
-{
- nombre: "TafirolMigra",
- precio: 3600,
-},
-
-{
- nombre: "Tafirolito",
- precio: 3200,
 },
 
 {
@@ -259,7 +237,7 @@
 
 {
  nombre: "TeRolfita",
- precio: 450,
+ precio: 500,
 },
 
 {
