--- a/factura.html
+++ b/factura.html
@@ -126,6 +126,11 @@
 },
 
 {
+ nombre: "IbuevanolMax",
+ precio: 3200,
+},
+
+{
  nombre: "Keterolac",
  precio: 800,
 },
@@ -197,7 +202,7 @@
 
 {
  nombre: "Fabogesic600",
- precio: 2300,
+ precio: 2500,
 },
 
 {
@@ -243,6 +248,11 @@
 {
  nombre: "Uvasal",
  precio: 400,
+},
+
+{
+ nombre: "Ovulol",
+ precio: 3000,
 },
 
 {
