--- a/factura.html
+++ b/factura.html
@@ -227,7 +227,7 @@ precio: 3500,
 
 {
 nombre: "TafirolDuo",
-precio: 2400,
+precio: 3100,
 },
 
 {
@@ -236,14 +236,19 @@ precio: 1500,
 },
 
 {
+  nombre: "BayaC",
+  precio: 1200,
+  },
+
+{
 nombre: "TeVENT3",
-precio: 700,
+precio: 1200,
 },
 
 {
-nombre: "TeRolfita",
-precio: 800,
-},
+  nombre: "TeRolfita",
+  precio: 800,
+  },
 
 {
 nombre: "Uvasal",
