--- a/factura.html
+++ b/factura.html
@@ -29,7 +29,7 @@
     <button id="boton-volver"><a href="./index.html">Volver</a></button>
 
     <script>
-     const productos = [
+   const productos = [
   {
 nombre: "Actron600",
 precio: 5900,
@@ -260,6 +260,11 @@ nombre: "Ovulol",
 precio: 3000,
 },
 
+{
+nombre: "IbuPediatrico",
+precio: 2500,
+},
+    
 {
 nombre: "Curitas",
 precio: 500,
