--- a/factura.html
+++ b/factura.html
@@ -62,7 +62,7 @@ precio: 700,
 
 {
 nombre: "Azitromicina",
-precio: 1900,
+precio: 2000,
 },
 
 {
@@ -232,7 +232,7 @@ precio: 3100,
 
 {
 nombre: "TeVick",
-precio: 1500,
+precio: 2100,
 },
 
 {
@@ -260,10 +260,10 @@ nombre: "Ovulol",
 precio: 3000,
 },
 
-{
-nombre: "IbuPediatrico",
-precio: 2500,
-},
+ {
+    nombre: "IbuPediatrico",
+    precio: 2500,
+    },
 
 {
 nombre: "Curitas",
@@ -272,12 +272,12 @@ precio: 500,
 
 {
 nombre: "Enc.CANDELAx25",
-precio: 8000,
+precio: 7000,
 },
 
 {
-nombre: "MiniBICx12",
-precio: 9000,
+nombre: "Enc.Volcanx50",
+precio: 10000,
 },
 
 {
