--- a/factura.html
+++ b/factura.html
@@ -29,7 +29,7 @@
     <button id="boton-volver"><a href="./index.html">Volver</a></button>
 
     <script>
-   const productos = [
+  const productos = [
   {
 nombre: "Actron600",
 precio: 6100,
@@ -101,6 +101,11 @@ precio: 1000,
 },
 
 {
+nombre: "DiclocPiri",
+precio: 1500,
+},
+
+{
 nombre: "Dorixina",
 precio: 1600,
 },
@@ -136,6 +141,11 @@ precio: 1000,
 },
 
 {
+nombre: "Laxante",
+precio: 3300,
+},
+
+{
 nombre: "Loratadina",
 precio: 1000,
 },
@@ -153,6 +163,11 @@ precio: 2300,
 {
 nombre: "Migral",
 precio: 3900,
+},
+
+{
+nombre: "Mylanta",
+precio: 2700,
 },
 
 {
@@ -231,24 +246,24 @@ precio: 3100,
 },
 
 {
+nombre: "TeRolfita",
+precio: 800,
+},
+
+{
 nombre: "TeVick",
 precio: 2100,
 },
 
 {
-  nombre: "BayaC",
-  precio: 1200,
-  },
+nombre: "BayaC",
+precio: 1200,
+},
 
 {
 nombre: "TeVENT3",
 precio: 1200,
 },
-
-{
-  nombre: "TeRolfita",
-  precio: 800,
-  },
 
 {
 nombre: "Uvasal",
@@ -260,10 +275,10 @@ nombre: "Ovulol",
 precio: 3000,
 },
 
- {
-    nombre: "IbuPediatrico",
-    precio: 2500,
-    },
+{
+nombre: "IbuPediatrico",
+precio: 2500,
+},
 
 {
 nombre: "Curitas",
