--- a/factura.html
+++ b/factura.html
@@ -217,7 +217,12 @@ precio: 5200,
 
 {
 nombre: "Fabogesic600",
-precio: 2600,
+precio: 2700,
+},
+
+{
+nombre: "Geniol",
+precio: 1700,
 },
 
 {
@@ -263,6 +268,11 @@ precio: 1200,
 {
 nombre: "TeVENT3",
 precio: 1200,
+},
+
+{
+nombre: "ViVita",
+precio: 900,
 },
 
 {
